@@ -30,6 +30,7 @@ package org.scilab.forge.jlatexmath.dynamic;
 
 import org.scilab.forge.jlatexmath.Atom;
 import org.scilab.forge.jlatexmath.Box;
+import org.scilab.forge.jlatexmath.EmptyAtom;
 import org.scilab.forge.jlatexmath.StrutBox;
 import org.scilab.forge.jlatexmath.TeXEnvironment;
 import org.scilab.forge.jlatexmath.TeXFormula;
@@ -46,11 +47,16 @@ public class DynamicAtom extends Atom {
     private ExternalConverter converter;
     private TeXFormula formula = new TeXFormula();
     private String externalCode;
-    
-    public DynamicAtom(String externalCode) {
+    private boolean insert;
+    private boolean refreshed;
+
+    public DynamicAtom(String externalCode, String option) {
 	this.externalCode = externalCode;
 	if (ecFactory != null) {
 	    this.converter = ecFactory.getExternalConverter();
+	}
+	if (option != null && option.equals("i")) {
+	    insert = true;
 	}
     }
 
@@ -62,11 +68,35 @@ public class DynamicAtom extends Atom {
 	ecFactory = factory;
     }
 
+    public boolean getInsertMode() {
+	return insert;
+    }
+
+    public Atom getAtom() {
+	if (!refreshed) {
+	    formula.setLaTeX(converter.getLaTeXString(externalCode));
+	    refreshed = true;
+	}
+	
+	if (formula.root == null) {
+	    return new EmptyAtom();
+	}
+
+	return formula.root;
+    }
+
     public Box createBox(TeXEnvironment env) {
 	if (converter != null) {
-	    formula.setLaTeX(converter.getLaTeXString(externalCode));
-	    return formula.root.createBox(env);
+	    if (refreshed) {
+		refreshed = false;
+	    } else {
+		formula.setLaTeX(converter.getLaTeXString(externalCode));
+	    }
+	    if (formula.root != null) {
+		return formula.root.createBox(env);
+	    }
 	}
+
 	return new StrutBox(0, 0, 0, 0);
     }
 }
