@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="version_jlm">
-  <property name="version" value="0.9.6" />
+  <property name="version" value="0.9.7" />
   <property name="java_version" value="5" />
 </project>
